[fix] routes and add controllers actions
