# src/backend/src/api/routes/v1/swimmer.ts
@@ -4,9 +4,9 @@ import { Router } from 'express';
 
 const router = Router();
 
-router.get("/:coachId", controller.listSwimmersByCoachId)
 router.patch("/:swimmerId", controller.patchSwimmer)
 router.delete("/:swimmerId", controller.deleteSwimmer)
-router.post("/:coachId", controller.createNewSwimmer)
+router.get("/:swimmerId/trainings", controller.getTrainingFromSwimmer)
+router.post("/:swimmerId/trainings", controller.createTrainingForSwimmer)
 
 export default router
