# src/backend/src/api/routes/v1/training.ts
@@ -1,11 +1,0 @@
-import controller from '@api/modules/training/controller';
-
-import { Router } from 'express';
-
-
-const router = Router();
-
-router.post("/:swimmerId", controller.createNewTrainingForSwimmer)
-router.get("/:swimmerId", controller.getTrainingBySwimmer)
-
-export default router
